<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="text_welcome">get moving and achive your running goals today!</string>
    <string name="login">Login</string>
    <string name="join_now">Join now</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="login_with_email">Continue with Email</string>
    <string name="new_here_sign_up">New here? Sign up</string>
    <string name="email_login">Email login</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="_1_8">1/8</string>
    <string name="next">Next</string>
    <string name="what_s_your_full_name">what’s your full name?</string>
    <string name="back">Back</string>
    <string name="what_s_your_gender">what’s your gender?</string>
    <string name="select_an_option">Select an option.</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="other">Other</string>
    <string name="i_don_t_want_to_answer">I don’t want to answer</string>
    <string name="what_s_your_running_experience">What\'s your running experience?</string>
    <string name="beginner_just_starting_out">Beginner (Just starting out)</string>
    <string name="intermediate_run_occasionally">Intermediate (Run occasionally)</string>
    <string name="advanced_run_regularly">Advanced (Run regularly)</string>
    <string name="how_often_do_you_run">How often do you run?</string>
    <string name="_1_2_times">1-2 times</string>
    <string name="_3_4_times">3-4 times</string>
    <string name="_5_times">5+ times</string>
    <string name="i_don_t_run_yet_but_i_want_to_start">I don’t run yet but I want to start</string>
    <string name="what_s_you_running_goal">What’s you running goal?</string>
    <string name="improve_endurance">Improve endurance</string>
    <string name="increase_speed">Increase speed</string>
    <string name="lose_weight">Lose weight</string>
    <string name="stay_fit_amp_healthy"><![CDATA[Stay fit & healthy]]></string>
    <string name="just_for_fun">Just for fun</string>
    <string name="_5k_race">5K race</string>
    <string name="_10k_race">10K race</string>
    <string name="half_marathon">Half marathon</string>
    <string name="full_marathon">Full marathon</string>
    <string name="triathlon">Triathlon</string>
    <string name="general_fitness_amp_wellness"><![CDATA[General fitness & Wellness]]></string>
    <string name="not_training_for_an_event">Not training for an event</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="select_your_height">Select your height.</string>
    <string name="what_s_your_weight">What’s your weight?</string>
    <string name="select_your_weight">Select your weight.</string>
    <string name="awesome_nyou_re_all_set">AWESOME!\nYOU\'RE ALL SET.</string>
    <string name="success_text">We\'ve personallized your experience based on your answers. Let\'s hit the ground running and crush your goals!</string>
    <string name="done">Done</string>
    <string name="ic_other">🧑‍🎓</string>
    <string name="ic_man">👨</string>
    <string name="ic_woman">👩</string>
    <string name="facebook_app_id">9976155629171837</string>
    <string name="fb_login_protocol_scheme">fb9976155629171837</string>
    <string name="facebook_client_token">b0cf485b91dc58349dc020f453011f2a</string>
    <string name="default_web_client_id">1050220367875-7fjnm8mcumjf02ac6eg006d6f6d12g21.apps.googleusercontent.com</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activities">Activities</string>
    <string name="recent_activities">Recent activities</string>
    <string name="see_all">See all</string>
    <string name="google_map_key">AIzaSyD-jGq4zIOAyXX3D_zk3ssV-hjbjBgt0jE</string>
</resources>