<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/smart_wearables__streamline_brooklyn" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/bebasneue_regular"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="46sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJoinNow"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/green_bg"
        android:fontFamily="@font/figtree_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/join_now"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/figtree_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:cornerRadius="4dp" />
</LinearLayout>