<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/bebasneue_regular"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="46sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/figtree_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_with_google"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="4dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/figtree_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_with_facebook"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="4dp"
        app:icon="@drawable/ic_facebook"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="20dp"
        app:iconTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEmail"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/figtree_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_with_email"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="4dp"
        app:icon="@drawable/ic_email"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="20dp"
        app:iconTint="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/text_color"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuest"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/figtree_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/continue_as_a_guest"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:cornerRadius="4dp" />
</LinearLayout>