<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activities.SurveyResultActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/confettiAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/confetti_animation"
        app:lottie_speed="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_success" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/bebasneue_regular"
            android:text="@string/awesome_nyou_re_all_set"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="46sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/figtree_regular"
            android:text="@string/success_text"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            style="@style/Widget.Material3.Button"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/green_bg"
            android:fontFamily="@font/figtree_medium"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/done"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</FrameLayout>