<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".view.activities.EmailLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebasneue_regular"
                    android:text="@string/email_login"
                    android:textColor="@color/text_color"
                    android:textSize="46sp" />

                <!-- Sử dụng style để TextInput trông đẹp hơn và thích ứng -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/nav_bottom"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/nav_bottom"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/figtree_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/figtree_medium"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/login"
                    android:textSize="14sp"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/line" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/figtree_regular"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/or_continue_with"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/line" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <!-- Sử dụng style để nút tự động thích ứng sáng/tối -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGoogle"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="180dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/figtree_regular"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/google"
                        android:textColor="@color/text_color"
                        android:textSize="14sp"
                        app:backgroundTint="@color/nav_bottom"
                        app:cornerRadius="4dp"
                        app:icon="@drawable/googleg_standard_color_18"
                        app:iconGravity="textStart"
                        app:iconPadding="12dp"
                        app:iconTint="@null"
                        app:strokeColor="@color/stroke"
                        app:strokeWidth="1dp" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btnFacebookHidden"
                        android:layout_width="320dp"
                        android:layout_height="50dp"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFacebook"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="180dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/figtree_regular"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/facebook"
                        android:textColor="@color/text_color"
                        android:textSize="14sp"
                        app:backgroundTint="@color/nav_bottom"
                        app:cornerRadius="4dp"
                        app:icon="@drawable/ic_facebook"
                        app:iconGravity="textStart"
                        app:iconPadding="12dp"
                        app:iconSize="20dp"
                        app:iconTint="@null"
                        app:strokeColor="@color/stroke"
                        app:strokeWidth="1dp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateNewAccount"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/figtree_medium"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/create_new_account"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:backgroundTint="@color/nav_bottom"
                    app:cornerRadius="4dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>