<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bebasneue_regular"
        android:text="@string/what_s_your_running_experience"
        android:textColor="@color/text_color"
        android:textSize="46sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/select_an_option"
        android:textColor="@color/text_color"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardBeginner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:checkable="true"
            app:cardCornerRadius="4dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconGravity="TOP_END"
            app:checkedIconSize="20dp"
            app:checkedIconTint="@color/text_color"
            app:strokeColor="@color/stroke_step"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/figtree_regular"
                    android:text="@string/beginner_just_starting_out"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardIntermediate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:checkable="true"
            app:cardCornerRadius="4dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconGravity="TOP_END"
            app:checkedIconSize="20dp"
            app:checkedIconTint="@color/text_color"
            app:strokeColor="@color/stroke_step"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/figtree_regular"
                    android:text="@string/intermediate_run_occasionally"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardAdvance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checkable="true"
            app:cardCornerRadius="4dp"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconGravity="TOP_END"
            app:checkedIconSize="20dp"
            app:checkedIconTint="@color/text_color"
            app:strokeColor="@color/stroke_step"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/figtree_regular"
                    android:text="@string/advanced_run_regularly"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>